Introduce Timer class

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = atmelavr
 board = uno
 framework = arduino
+test_filter = target/*
+
+[env:native]
+platform = native
+test_framework = unity
+test_filter = host/*
