--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,11 @@ platform = native
 test_framework = unity
 test_filter = host/*
 lib_extra_dirs = sim
+debug_test = host/test_data_structures
+
+[env:native_with_gui]
+platform = native
+lib_extra_dirs = sim
+build_flags = 
+    -lzmq
+    -D SIMGUI
