Lift SimGui interface to more abstract functions

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = atmelavr
 board = uno
 framework = arduino
 test_filter = target/*
+lib_extra_dirs = drivers
 
 [env:native]
 platform = native
