Move Timers from polling to systick
This significantly simplifies the logic and is
less ressource hungry, but chip specific.

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ platform = native
 test_framework = unity
 test_filter = host/*
 lib_extra_dirs = sim
-debug_test = host/test_data_structures
+debug_test = host/test_timer
 
 [env:native_with_gui]
 platform = native
