Prevent native tests from running twice

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,11 +20,11 @@ platform = native
 test_framework = unity
 test_filter = host/*
 lib_extra_dirs = sim
-debug_test = host/test_timer
 
 [env:native_with_gui]
 platform = native
 lib_extra_dirs = sim
+test_filter = gui/*
 build_flags = 
     -lzmq
     -D SIMGUI
