Port code to Arduino Nano

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,13 @@ framework = arduino
 test_filter = target/*
 lib_extra_dirs = drivers
 
+[env:nano]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+test_filter = target/*
+lib_extra_dirs = drivers
+
 [env:native]
 platform = native
 test_framework = unity
