Integrate LCD display

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,8 @@ board = nanoatmega328
 framework = arduino
 test_filter = target/*
 lib_extra_dirs = drivers
+lib_deps = 
+    arduino-libraries/LiquidCrystal@^1.0.7
 
 [env:native]
 platform = native
