--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ test_filter = target/*
 lib_extra_dirs = drivers
 lib_deps = 
     arduino-libraries/LiquidCrystal@^1.0.7
+    robtillaart/CRC@^0.3.1
 
 [env:native]
 platform = native
